valtre-cio-edge/css/landing.css
/*------- Normalize -------*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    justify-content: center;
    align-items: center;
    transition: 0.2ms;

}
/*------- Basic Container -------*/
.c-container {
    width: 100%;
    margin:auto;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    min-height: 100vh;
    min-height: 100dvh;
    border: red solid 0.5px;
}
.c-container--nav {
    width: 100%;
    margin:auto;
    height: 80px;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
}
/*------- H E R O -------*/
.c-hero {
    background-image: url("../img/conected-dots.svg");
    background-color: white;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.c-navbar{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 20px 80px;
    background-color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    -webkit-box-shadow: 0px 10px 35px -12px rgba(0,0,0,0.35);
    -moz-box-shadow: 0px 10px 35px -12px rgba(0,0,0,0.35);
    box-shadow: 0px 10px 35px -12px rgba(0,0,0,0.35);
}
.c-navbar__logo {
    margin: 0;
}
.c-navbar__logo img {
    height: 50px;
    width: 100%;
}
.o-hero-nav a {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
    text-decoration: none;
    color: black;
    font-size: 13pt;
}
.o-hero-nav--desktop{
    justify-content: space-between;
}
.o-hero-nav--desktop a{
    margin-left: 20px;
}
.c-container__hero{
    display: flex;
    align-items: center;
    flex-direction: row;
}
.c-hero__logo {
    margin: auto;
    width: 40%;
}
.o-hero__logo{
    width: 100%;
}
.c-hero__slogan {
    margin: auto;
}
/*------- Cobertura -------*/
.o-h2 {
    letter-spacing: 2pt;
}

/*------- Typography -------*/
.o-h1, .o-h2, .o-h3, .o-h4, .o-h5, .o-h6 {
    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: black;
}
.o-h1{
    font-size: 55pt;
    line-height: 55pt;
}
.o-h1 span {
    color: #0099ff;
}
.o-h2{
    font-size: 55pt;
}
.o-h3{
    font-size: 34pt;
}
.o-h4{
    font-size: 21pt;
}
p a {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

/*------- Medía Querys -------*/
/* xxxxs - mobile S */
@media (min-width: 320px) {
    /*---- Basic Container ----*/
    .c-container {
        max-width: 320px;
    }
    .c-container--nav {
        max-width: 320px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--desktop {
        display: none;
    }
    .c-container__hero {
        flex-direction: column;
    }
    .c-hero__logo {
        width: 75%;
        margin: auto auto 0.5rem auto;
    }
    .c-hero__slogan {
        margin: 10% auto auto auto;
    }
    .o-h1 {
        text-align: center;
        font-size: 35pt;
        line-height: 35pt;
    }
}    
/* xxxs - mobile M */
@media (min-width: 375px) {
    .c-container {
        max-width: 375px;
    }
    .c-container--nav {
        max-width: 375px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--desktop {
        display: none;
    }
    .c-container__hero {
        flex-direction: column;
    }
    .c-hero__logo {
        width: 70%;
    }
    .o-h1 {
        text-align: center;
        font-size: 40pt;
        line-height: 40pt;
    }
}
/* xxs - mobile L */
@media (min-width: 425px) {
    .c-container {
        max-width: 425px;
    }
    .c-container--nav {
        max-width: 425px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--desktop {
        display: none;
    }
    .c-container__hero {
        flex-direction: column;
    }
    .c-hero__logo {
        width: 60%;
    }
    .o-h1 {
        text-align: center;
        font-size: 40pt;
        line-height: 40pt;
    }
}
/* xs - mobile XL */
@media (min-width: 475px) {
    .c-container {
        max-width: 475px;
    }
    .c-container--nav {
        max-width: 475px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--desktop {
        display: none;
    }
    .c-container__hero {
        flex-direction: column;
    }
    .o-h1 {
        text-align: center;
        font-size: 45pt;
        line-height: 45pt;
    }
}

/* sm - mobile XXL  */
@media (min-width: 640px) {
    .c-container {
        max-width: 640px;
    }
    .c-container--nav {
        max-width: 640px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--desktop {
        display: none;
    }
    .c-container__hero {
        flex-direction: column;
    }
    .c-hero__logo {
        width: 50%;
    }
}

/* md - Tablet */
@media (min-width: 768px) {
    .c-container {
        max-width: 768px;
    }
    .c-container--nav {
        max-width: 768px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--desktop {
        display: none;
    }
    .c-container__hero {
        flex-direction: column;
    }
    .c-hero__logo {
        width: 40%;
    }
    .o-h1 {
        text-align: center;
        font-size: 50pt;
        line-height: 50pt;
    }
}

/* lg - Desktop */
@media (min-width: 1024px) {
    .c-container {
        max-width: 1024px;
    }
    .c-container--nav {
        max-width: 1024px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--desktop {
        display: flex;
    }
    .o-hero-nav--menu {
        display: none;
    }
    .c-container__hero {
        flex-direction: row;
    }
    .c-hero__logo {
        margin: auto;
    }
    .c-hero__slogan {
        margin: auto;
    }
    .o-h1 {
        text-align: left;
        font-size: 55pt;
    }
}

/* xl */
@media (min-width: 1280px) {
    .c-container {
        max-width: 1280px;
    }
    .c-container--nav {
        max-width: 1280px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--menu {
        display: none;
    }
}

/* 2xl */
@media (min-width: 1536px) {
    .c-container {
        max-width: 1536px;
    }
    .c-container--nav {
        max-width: 1536px;
    }
    /*---- H E R O ----*/
    .o-hero-nav--menu {
        display: none;
    }
    .o-h1 {
        text-align: left;
        font-size: 70pt;
        line-height: 70pt;
    }
}

